[package]
name = "nftsale"
version = "1.0.0"
authors = ["Joni Lai <phantomtop0127@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
cw721 = { version = "0.11"}
cw20 = { version = "0.10.3" }
cw20-base = { version = "0.10.3", features = ["library"] }
serde = { version = "1.0.127", default-features = false}
thiserror = { version = "1.0.26" }
cw-utils = { version= "0.11.1" }
prost = "0.9.0"
hex = "0.4"
sha2 = { version = "0.9.5", default-features = false }
wasmswap = {version = "1.0.0-beta", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
